--- a/MPChartLib/build.gradle
+++ b/MPChartLib/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 apply plugin: 'com.github.dcendents.android-maven'
 
 group='com.github.priamm'
@@ -7,10 +8,10 @@ android {
     compileSdkVersion 32
     buildToolsVersion '28.0.3'
     defaultConfig {
-        minSdkVersion 14
+        minSdkVersion 16
         targetSdkVersion 32
-        versionCode 3
-        versionName '3.1.0'
+        versionCode 401
+        versionName '4.0.1'
     }
     buildTypes {
         release {
@@ -26,6 +27,9 @@ android {
 dependencies {
     implementation 'androidx.annotation:annotation:1.3.0'
     testImplementation 'junit:junit:4.13.2'
+    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")
+    implementation "androidx.core:core-ktx:1.7.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 task sourcesJar(type: Jar) {
@@ -48,4 +52,7 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 artifacts {
     archives sourcesJar
     archives javadocJar
+}
+repositories {
+    mavenCentral()
 }
